--- a/style.css
+++ b/style.css
@@ -546,6 +546,15 @@ button, button[disabled]:hover, button[disabled]:focus, input[type="button"], in
 
 .main-navigation li:hover > a, .main-navigation li.focus > a {
     color: #fff;
+    border: 1px solid #3e3e3e;
+}
+
+.main-navigation li {
+    border-top: 1px solid #3e3e3e;
+}
+
+.dropdown-toggle::after {
+    border: none;
 }
 
 .main-navigation ul ul li {
@@ -556,6 +565,10 @@ button, button[disabled]:hover, button[disabled]:focus, input[type="button"], in
     border-bottom: none;
 }
 
+.menu-toggle.toggled-on, .menu-toggle.toggled-on:hover, .menu-toggle.toggled-on:focus {
+    background-color: #2c2c2c;
+}
+
 .menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2043{
   height: 10px;
 }
@@ -563,6 +576,7 @@ button, button[disabled]:hover, button[disabled]:focus, input[type="button"], in
 .menu-toggle {
     margin-right: 19px;
     color: white;
+    border: 0px;
 }
 
 li.current-cat {
@@ -585,6 +599,7 @@ li.current-cat a {
 body:not(.search-results) article:not(.type-page) .entry-footer .avatar {
     width: 38px;
     float: left;
+    height: auto;
 }
 
 .single .byline, .full-size-link, body:not(.search-results).group-blog .byline, body:not(.search-results) .entry-format, body:not(.search-results) .cat-links, body:not(.search-results) .tags-links, body:not(.search-results) article:not(.sticky) .posted-on, body:not(.search-results) article:not(.type-page) .comments-link, body:not(.search-results) article:not(.type-page) .entry-footer .edit-link {
@@ -820,8 +835,57 @@ input[type="date"], input[type="time"], input[type="datetime-local"], input[type
   line-height: 1.2em;
 }
 
-.cat-links {
-    border-top: 1px solid #bcb8b8;
-    margin-top: 40px;
-    padding-top: 10px;
+@media screen
+    and (max-width : 909px) {
+      .cat-links {
+          display: none;
+      }
+}
+
+/* Form */
+@media screen
+    and (max-width : 909px) {
+      .comment-form {
+          margin-left: 0%;
+      }
+}
+
+@media screen
+    and (max-width : 909px) {
+      .comments-title, .comment-reply-title {
+        margin-left: 0%;
+      }
+}
+
+@media screen
+    and (max-width : 909px) {
+        #author {
+            width: 100%;
+            height: 38px;
+        }
+}
+
+@media screen
+    and (max-width : 909px) {
+        #email {
+            width: 100%;
+            height: 38px;
+        }
+}
+
+@media screen
+    and (max-width : 909px) {
+        #url {
+            width: 100%;
+            height: 38px;
+        }
+}
+
+@media screen
+    and (max-width : 909px) {
+      .breadcrumb {
+          margin-top: 9px;
+          margin-left: 3%;
+          margin-bottom: 12px;
+        }
 }
